# ac-simulator-3d

./: CMakeLists.txt  README.md
Header/: Camera3D.h  Controls.h  Renderer.h  Renderer2D.h  State.h  TextRenderer.h  Util.h
Shaders/: blinn.frag  normal_visualize.frag  overlay.frag  overlay.vert  phong.frag  phong.vert  text.frag
Source/: Camera3D.cpp  Controls.cpp  Main.cpp  Renderer.cpp  Renderer2D.cpp  State.cpp  TextRenderer.cpp  Util.cpp
